k8s/api_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: seo
  name: seo-optimization-v2
  labels:
    app: seo-optimization-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seo-optimization-v2
  template:
    metadata:
      labels:
        app: seo-optimization-v2
    spec:
      containers:
      - name: seo-optimization-v2
        image: sofibuz/seo-optimization
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 8000
        # livenessProbe:
        #   httpGet:
        #     path: /docs
        #     port: 8000
        #   initialDelaySeconds: 0
        #   periodSeconds: 30
        #   timeoutSeconds: 2
        # readinessProbe:
        #   httpGet:
        #     path: /docs
        #     port: 8000
        #   initialDelaySeconds: 0
        #   periodSeconds: 30
        #   timeoutSeconds: 2
        #   successThreshold: 5
