k8s/flower_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: seo
  name: flower
  labels:
    app: flower
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flower
  template:
    metadata:
      labels:
        app: flower
    spec:
      containers:
      - name: flower
        image: sofibuz/seo-optimization
        command: ["poetry", "run", "celery", "-A", "api.main.celery", "flower", "--port=5555"]
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 5555
