k8s/celery_service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: seo
  name: celery-worker
spec:
  selector:
    app: celery-worker
  ports:
  - port: 8000
    targetPort: 8000
