k8s/flower_service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: seo
  name: flower
spec:
  selector:
    app: flower
  ports:
  - port: 5555
    targetPort: 5555
