k8s/nginx_services.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: seo
  name: nginx
spec:
  selector:
    app: nginx
  ports:
  - port: 8089
    targetPort: 80
