k8s/pg_service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: seo
  name: seo-postgres-v2
  # labels:
  #   app: seo
spec:
  selector:
    app: seo-postgres-v2
  ports:
  - port: 5432
    targetPort: 5432
