k8s/rmq_service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: seo
  name: rabbitmq
  # labels:
  #   app: seo
spec:
  selector:
    app: rabbitmq
  ports:
  - name: amqo
    port: 5672
    targetPort: 5672
  - name: managenent
    port: 15672
    targetPort: 15672
